<resources>
    <string name="app_name">Tu Red</string>
    <string name="name_develop">Developing by Seibis</string>
    <string name="name_develop_web">www.seibis.com.co</string>
    <string name="text_button_actualizar_saldo">Actualizar</string>
    <string name="text_body_actualizar_saldo">Productos asignados con sus respectivos saldos</string>
    <string name="text_cap_num_text_search">Digitar número</string>
    <string name="text_button_init">Iniciar Sesión</string>
    <string name="text_logo_init">Logo iniciar sesión</string>
    <string name="text_cap_user_init">Usuario</string>
    <string name="text_cap_pass_init">Contraseña</string>
    <string name="text_enter_init">Ingresar</string>
    <string name="title_activity_frame">frame</string>
    <string name="text_cerrar_sesion">CERRAR SESION</string>
    <string name="text_act_info">ACTUALIZAR TOKEN</string>
    <string name="text_contact_info">CONTÁCTANOS</string>
    <string name="text_close_app">CERRAR APLICACIÓN</string>
    <string name="text_cambio_password_msj_body">Bienvenido por primera vez, por favor realiza el cambio de contraseña.</string>
    <string name="text_password_actual">Contraseña Actual</string>
    <string name="text_password_nueva">Contraseña Nueva</string>
    <string name="text_password_nueva_confirmar">Confirmar Nueva Contraseña</string>
    <string name="text_boton_actualizar_password">ACTUALIZAR CONTRASEÑA</string>
    <string name="text_boton_cancelar_actualizar_password">CANCELAR</string>
    <string name="text_logo_init_producto_recarga">Logo operador</string>
    <string name="text_body">PRODUCTO INACTIVO</string>
    <string name="text_button">REGRESAR</string>
    <string name="text_num_recarga">Numero Celular</string>
    <string name="text_valor_recarga">Valor Recarga</string>
    <string name="text_boton_cancelar_valor_recarga">Cancelar</string>
    <string name="text_boton_confirmar_valor_recarga">Aceptar</string>
    <string name="text_cap_fecha_inicial">Fecha Inicial</string>
    <string name="text_cap_fecha_final">Fecha Final</string>
    <string name="text_button_buscar">Buscar</string>
    <string name="text_button_dia_actual">Fecha actual</string>
    <string name="text_button_uno_dias_pasados">Ayer</string>
    <string name="text_button_actualizar_trans_cinco">Actualizar</string>
    <string name="text_compras">COMPRAS</string>
    <string name="text_wallet">CARTERA</string>
    <string name="text_recargas">RECARGAS</string>
    <string name="text_wplay">WPLAY</string>
    <string name="text_soat">SOAT</string>
    <string name="text_certificados">CERTIFICADOS</string>
    <string name="text_total">TOTAL</string>
    <string name="text_total_wallet">Total Compra</string>
    <string name="text_deuda_inicial_wallet">Deuda Inicial</string>
    <string name="text_deuda_total_wallet">Deuda Total</string>
    <string name="text_abono_wallet">Abono</string>
    <string name="text_deuda_final_wallet">Deuda Final</string>
    <string name="text_cap_saldo_recargar">Valor</string>
    <string name="text_boton_aceptar_cap_saldo_recargar">Recargar</string>
    <string name="text_boton_cancelar_cap_saldo_recargar">Cancelar</string>
    <string name="text_seleccionar_producto_solict_recarga">SELECCIONE UN PRODUCTO</string>
    <string name="text_info_saldo">Informacion Saldo</string>
    <string name="text_info_cap_matricula">Número de matricula</string>
    <string name="text_cap_celular">Celular para Envio de Codigo</string>
    <string name="text_cap_correo">Correo para Envio de Codigo</string>
    <string name="text_cap_cap_correo">Correo para Envio de Codigo</string>
    <string name="text_boton_validar_matricula">VALIDAR MATRICULA</string>
    <string name="text_boton_cancelar_certificado_snr">CANCELAR</string>
    <string name="text_boton_comprar_certificado_certificado_snr">COMPRAR MATRICULA</string>
    <string name="text_cap_ciudad_letras">Ciudad</string>
    <string name="text_info_solict_token">Tu tiempo de sesion ha cauducado por favor, ingresa tu contraseña para iniciar sesion de nuevo.</string>
    <string name="text_body_bolsa_recarga">Por favor seleccionar una bolsa para realizar la recarga</string>
    <string name="text_radio_bolsa_botton_info">Descuento de GANANCIAS </string>
    <string name="text_radio_normal_botton_info">Descuento normal</string>
    <string name="text_aceptar_bolsa_recarga">Aceptar</string>
    <string name="text_cancelar_bolsa_recarga">Cancelar</string>
    <string name="text_tittle_contact">CONTÁCTANOS</string>
    <string name="text_body_tel_one">Celular: 311-230-6725</string>
    <string name="text_body_tel_two">Fíjo: (1) 704-9362</string>
    <string name="text_body_footer">Pulsa cualquier número para contáctarnos. \n\nTu Red es una empresa multiproducto de recargas moviles y mucho mas. Solo contáctanos y estaremos en tu local o comercio.</string>
    <string name="text_body_footer_two">www.tu-red.com.co</string>
    <string name="text_soat_placa">Por favor ingrese su placa</string>
    <string name="text_soat_cap_placa">Placa</string>
    <string name="text_soat_button_placa_verif">VALIDAR PLACA</string>
    <string name="text_continue_buy_soat">CONTINUAR COMPRA</string>
    <string name="text_cancel_buy_soat">CANCELAR</string>
    <string name="print_display">Display Mode</string>
    <string name="print_text">Print Text</string>
    <string name="print_english">Print English</string>
    <string name="print_char">Print Char</string>
    <string name="print_picture">Print Picture</string>
    <string name="print_qrcode">Print QRcode</string>
    <string name="print_barcode">Print Barcode</string>
    <string name="print_self_check">Print Self Check</string>
    <string name="print_init">Print Init</string>
    <string name="print_query_length">Print Query Length</string>
    <string name="print_three_lines">Print three Lines</string>
    <string name="print_black_block">Print Black Block</string>
    <string name="print_baidu_bill">Print Baidu Bill</string>
    <string name="print_meituan_bill">Print Meituan Bill</string>
    <string name="print_elemo_bill">Print Elemo Bill</string>
    <string name="print_koubei_bill">Print Koubei Bill</string>
    <string name="print_table">Print Table</string>
    <string name="print_multi_content_test">Print Multi Content Test</string>
    <string name="print_comprehensive_test">Print Comprehensive Test</string>
    <string name="print_sunmi_mode">SunMi Mode</string>
    <string name="print_Multithread_test">Print Multithread Test</string>
    <string name="loop_print_test">Loop Print Test</string>
    <string name="print_driver_error_test">Print Driver Error Test</string>
    <string name="print_wave_test">Print wave Test</string>
    <string name="motor_idling">Motor Idling 10000 Steps</string>
    <string name="print_commond_input">Print Commond Input</string>
    <string name="printer_run_paper_lines">Printer Run Paper</string>
    <string name="reset_motor_high_temp_status">Rest Moter Heigh Temp Status</string>
    <string name="out_of_paper">The printer is out of paper</string>
    <string name="exists_paper">The printer paper is ready</string>
    <string name="printer_is_working">The printer is working</string>
    <string name="printer_high_temp_alarm">Printer high temperature alarm</string>
    <string name="motor_high_temp_alarm">Motor high temperature alarm</string>
    <string name="printer_current_task_print_complete">The print task has been printed</string>
    <string name="printer_exception">Printer Exception</string>
    <string name="unknown_error">unknown status</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="exit">Exit</string>
</resources>