<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppThemeInit">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorInitBack">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_menu" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorInitBack">


            <TextView
                android:id="@+id/textTitleContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:textSize="20sp"
                android:clickable="true"
                android:textStyle="bold"
                android:text="@string/text_tittle_contact"
                android:textColor="@color/ic_launcher_background"
                android:gravity="center"
                android:focusable="true" />

            <TextView
                android:id="@+id/textBodyTelOne"
                android:layout_width="match_parent"
                android:layout_marginLeft="20sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:clickable="true"
                android:onClick="onClick"
                android:layout_marginTop="10dp"
                android:text="@string/text_body_tel_one"
                android:textColor="@color/ic_launcher_background"
                android:gravity="left"
                android:focusable="true"/>
            <TextView
                android:id="@+id/textBodyTelTwo"
                android:layout_width="match_parent"
                android:layout_marginLeft="20sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:onClick="onClick"
                android:layout_marginTop="10dp"
                android:text="@string/text_body_tel_two"
                android:textColor="@color/ic_launcher_background"
                android:gravity="left" />

            <TextView
                android:id="@+id/textBodyFooter"
                android:layout_width="match_parent"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:linksClickable="true"
                android:layout_marginTop="10dp"
                android:text="@string/text_body_footer"
                android:textColor="@color/ic_launcher_background"
                android:gravity="left" />

            <TextView
                android:id="@+id/textBodyFooterTwo"
                android:layout_width="match_parent"
                android:layout_marginLeft="20sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"

                android:linksClickable="true"
                android:layout_marginTop="10dp"
                android:text="@string/text_body_footer_two"
                android:textColor="@color/ic_launcher_background"
                android:gravity="center" />



        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
