<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.CertificadosActivity">

    <RelativeLayout
        android:id="@+id/llHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_menu" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_below="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorInitBack" />


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view1"
        android:background="@color/colorInitBack">

        <LinearLayout
            android:id="@+id/body_one__certificados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorInitBack"
            android:orientation="vertical">
        <LinearLayout
            android:id="@+id/body_one_child__certificados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoCertificadosSNR"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:layout_gravity="center"
                android:contentDescription="@string/text_logo_init_producto_recarga" />

            <TextView
                android:id="@+id/textInfoSaldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/text_info_saldo"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/body_four_child_certificados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/linearlayour_redondos"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/textInfoCertificadosSNR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_cap_correo"
                android:textColor="@color/ic_launcher_background"
                android:textSize="15sp" />
            </LinearLayout>


            <RadioGroup
                android:id="@+id/opciones_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp">

                <CheckBox
                    android:id="@+id/chBoxOpcOneCertificados"
                    android:textColor="@color/white"
                    android:buttonTint="@color/colorInitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/text_radio_bolsa_botton_info" />

            </RadioGroup>

            <EditText
                android:id="@+id/capLetrasCiudad"
                android:layout_width="180sp"
                android:layout_height="40sp"
                android:layout_gravity="left"
                android:layout_marginTop="10sp"
                android:background="@drawable/edittext_rounded"
                android:hint="@string/text_cap_ciudad_letras"
                android:maxLines="1"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:singleLine="true"
                android:textColor="@color/colorInitBack"
                android:textColorHint="@color/colorInitBack"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spOficinasCertificadosSNR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/spinner_selector"/>


            <TextView
                android:id="@+id/textCapNumMatricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:gravity="left"
                android:text="@string/text_info_cap_matricula"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/body_three_child_certificados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <EditText
                android:id="@+id/capCodigoCiudad"
                android:layout_width="80sp"
                android:layout_height="40sp"
                android:layout_gravity="left"
                android:layout_marginTop="10sp"
                android:background="@drawable/edittext_rounded"
                android:maxLines="1"
                android:inputType="number"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:singleLine="true"
                android:textColor="@color/colorInitBack"
                android:textColorHint="@color/colorInitBack"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/capCodigoMatricula"
                android:layout_width="180sp"
                android:layout_height="40sp"
                android:layout_gravity="left"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/edittext_rounded"
                android:maxLines="1"
                android:inputType="number"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:singleLine="true"
                android:textColor="@color/colorInitBack"
                android:textColorHint="@color/colorInitBack"
                android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textCapCelularEnvioCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:gravity="left"
                android:text="@string/text_cap_celular"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/capCelularEnvioCodigo"
                android:layout_width="280sp"
                android:layout_height="40sp"
                android:layout_gravity="left"
                android:layout_marginTop="10sp"
                android:background="@drawable/edittext_rounded"
                android:drawableRight="@drawable/ic_phone_iphone_color_login_24dp"
                android:hint="@string/text_cap_celular"
                android:maxLines="1"
                android:inputType="number"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:singleLine="true"
                android:textColor="@color/colorInitBack"
                android:textColorHint="@color/colorInitBack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textCapCorreoEnvioCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:gravity="left"
                android:text="@string/text_cap_correo"
                android:textColor="@color/white"
                android:textSize="20sp" />



            <EditText
                android:id="@+id/capCorreoEnvioCodigo"
                android:layout_width="280sp"
                android:layout_height="40sp"
                android:layout_gravity="left"
                android:layout_marginTop="10sp"
                android:background="@drawable/edittext_rounded"
                android:drawableRight="@drawable/ic_cap_correo"
                android:hint="@string/text_cap_cap_correo"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:singleLine="true"
                android:textColor="@color/colorInitBack"
                android:textColorHint="@color/colorInitBack"
                android:textSize="15sp" />

        </LinearLayout>

            <LinearLayout
                android:id="@+id/body_two_child_certificados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAceptarCertificados"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_rosado"
                    android:bottomLeftRadius="7dp"
                    android:bottomRightRadius="7dp"
                    android:onClick="onClick"
                    android:radius="0.1dp"
                    android:text="@string/text_boton_validar_matricula"
                    android:textAllCaps="false"
                    android:textColor="@color/ic_launcher_background"
                    android:textSize="10sp"
                    android:topLeftRadius="7dp"
                    android:topRightRadius="7dp" />

                <Button
                    android:id="@+id/buttonCancelCertificados"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40sp"
                    android:background="@drawable/button_rosado"
                    android:bottomLeftRadius="7dp"
                    android:bottomRightRadius="7dp"
                    android:onClick="onClick"
                    android:radius="0.1dp"
                    android:text="@string/text_boton_cancelar_certificado_snr"
                    android:textAllCaps="false"
                    android:textColor="@color/ic_launcher_background"
                    android:textSize="10sp"
                    android:topLeftRadius="7dp"
                    android:topRightRadius="7dp" />

            </LinearLayout>


        </LinearLayout>




    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>